--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fal-ai/client": "^1.7.2",
     "@google/generative-ai": "^0.24.1",
+    "@supabase/supabase-js": "^2.86.0",
     "axios": "^1.13.2",
     "expo": "~54.0.25",
     "expo-file-system": "~19.0.19",
@@ -20,7 +21,8 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-paper": "^5.14.5",
-    "react-native-safe-area-context": "~5.6.0"
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-url-polyfill": "^3.0.0"
   },
   "private": true
 }
