--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@supabase/supabase-js": "^2.86.0",
     "axios": "^1.13.2",
     "expo": "~54.0.25",
+    "expo-auth-session": "^7.0.9",
+    "expo-crypto": "^15.0.7",
     "expo-file-system": "~19.0.19",
     "expo-image-picker": "~17.0.8",
     "expo-media-library": "~18.2.0",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "^15.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-paper": "^5.14.5",
