--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
     "@fal-ai/client": "^1.7.2",
     "@google/generative-ai": "^0.24.1",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@supabase/supabase-js": "^2.86.0",
     "axios": "^1.13.2",
     "expo": "~54.0.25",
@@ -19,6 +19,7 @@
     "expo-crypto": "^15.0.7",
     "expo-file-system": "~19.0.19",
     "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
     "expo-media-library": "~18.2.0",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "^15.0.9",
