--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@supabase/supabase-js": "^2.86.0",
     "axios": "^1.13.2",
-    "expo": "~54.0.25",
+    "expo": "~54.0.26",
     "expo-auth-session": "^7.0.9",
+    "expo-clipboard": "~8.0.8",
     "expo-crypto": "^15.0.7",
     "expo-file-system": "~19.0.19",
+    "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-media-library": "~18.2.0",
+    "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "^15.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-paper": "^5.14.5",
+    "react-native-purchases": "^9.6.9",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-url-polyfill": "^3.0.0"
   },
